# wizlightcpp-extended

./: CMakeLists.txt  README.md
include/: LightIntensityWidget.h  LightIntesityWidgetWithSlider.h  TemperateTimeSchedule.h  bulb.h  mainwindow.h  temperatureSchedule.json  wizcontrol.h
src/: LightIntensityWidget.cpp  LightIntesityWidgetWithSlider.cpp  bulb.cpp  main.cpp  mainwindow.cpp  wizcontrol.cpp
